new dynamick changes

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ PASSWORD_SECRET=f6fbe3b1c7c53f70cf471a28e0b07a6a
 
 JWT_SECRET=f6fbe3b1c7c53f70cf471a28e0b07a6a
 JWT_EXPIRES_IN_DAYS=360
+
+FACTOR_KEY=4571279e-4b49-11f0-a562-0200cd936042
+FACTOR_TEMPLATE_NAME=Visitor Management System
